added cors for devlopment and added login logic
